# from the src directory:
# find -regex '.*\.\(tsx?\|css\)' | sed "s|^./|'| ; s|/|' / '|g ; s|$|',|" | sort
ui_src += files(
    'App.tsx',
    'components' / 'ArtistEditor.tsx',
    'components' / 'AuthorEditor.tsx',
    'components' / 'AutocompleteMultiple.tsx',
    'components' / 'Autocomplete.tsx',
    'components' / 'BrowserKaraPlayer.tsx',
    'components' / 'Context.tsx',
    'components' / 'DownloadAnchor.tsx',
    'components' / 'FileUploader.tsx',
    'components' / 'KaraCard.tsx',
    'components' / 'KaraEditor.tsx',
    'components' / 'MediaEditor.tsx',
    'components' / 'MpvKaraPlayer.tsx',
    'components' / 'MugenImport.tsx',
    'components' / 'ProfileEditor.tsx',
    'components' / 'TokenForm.tsx',
    'index.css',
    'index.tauri.css',
    'index.tsx',
    'layout' / 'AuthHero.tsx',
    'layout' / 'Layout.tsx',
    'layout' / 'Navbar.tsx',
    'layout' / 'ProfileDropdown.tsx',
    'layout' / 'Sidebar.tsx',
    'pages' / 'desktop.tsx',
    'pages' / 'fonts' / 'browse.tsx',
    'pages' / 'index.tsx',
    'pages' / 'karaoke' / 'browse' / '[id].tsx',
    'pages' / 'karaoke' / 'browse' / 'index.tsx',
    'pages' / 'karaoke' / 'issues.tsx',
    'pages' / 'karaoke' / 'mugen.tsx',
    'pages' / 'karaoke' / 'new.tsx',
    'pages' / 'logout.tsx',
    'pages' / 'profile.tsx',
    'pages' / 'redirect.tsx',
    'pages' / 'settings.tsx',
    'pages' / 'tags' / 'artist.tsx',
    'pages' / 'tags' / 'author.tsx',
    'pages' / 'tags' / 'media.tsx',
    'utils' / 'karaberus-client.ts',
    'utils' / 'karaberus.d.ts',
    'utils' / 'karaoke.ts',
    'utils' / 'session.ts',
    'utils' / 'tauri.ts',
    'vite-env.d.ts',
)
